<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/date_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/date_edit_text"
            android:inputType="datetime"
            android:hint="@string/meeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_tip"
        android:layout_below="@+id/date_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/clientname_edit_text"
            android:hint="@string/name_of_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/phone_ll"
        android:orientation="horizontal"
        android:layout_below="@+id/name_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_tip"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/phone_tip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/phone_number"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/address_tip"
        android:layout_below="@+id/phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/address_edit_text"
            android:hint="@string/address_of_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/square_tip"
        android:layout_below="@+id/address_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/square_edit_text"
            android:hint="@string/square_of_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cost_tip"
        android:layout_below="@+id/square_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/cost_edit_text"
            android:hint="@string/object_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/smc_tip"
        android:layout_below="@+id/cost_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/smc_edit_text"
            android:hint="@string/cost_of_square_meter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/aims_ll"
        android:layout_below="@+id/smc_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="4dp"
            android:text="@string/client_aim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/client_aims"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/aims_ll"
        android:id="@+id/notes_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/notes_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_notes"
            android:textAlignment="gravity"
            android:gravity="bottom"
            android:inputType="textMultiLine"
            android:lines="7"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_change_button"
        android:layout_below="@+id/notes_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"/>
    <Button
        android:id="@+id/complete_button"
        android:layout_below="@+id/save_change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_meeting"/>



</RelativeLayout>
</ScrollView>