<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/date_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/date_edit_text"
            android:inputType="datetime"
            android:hint="@string/date_of_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_tip"
        android:layout_below="@+id/date_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/clientname_edit_text"
            android:hint="@string/name_of_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/phone_ll"
        android:orientation="horizontal"
        android:layout_below="@+id/name_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_tip"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/phone_tip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/phone_number"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:layout_weight="1"
        android:id="@+id/phone_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_phone_in_talk_black_24dp"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/durability_tip"
        android:layout_below="@+id/phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/durability_edit_text"
            android:hint="@string/name_of_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/results_ll"
        android:layout_below="@+id/durability_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="4dp"
            android:text="@string/results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/catlist"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/results_ll"
        android:id="@+id/notes_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/notes_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textAlignment="gravity"
            android:gravity="bottom"
            android:inputType="textMultiLine"
            android:lines="7"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"/>



</RelativeLayout>